--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ on:
       dotnet-version:
         description: 'Version of .NET SDK to use'
         type: string
-        required: true
+        required: false
+        default: '9.0.x'
       os:
         description: 'JSON array of runners'
         type: string
