--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
       dotnet-version:
         type: string
         required: true
+      test-project:
+        description: 'Path to test project'
+        type: string
+        required: false
       coverage-threshold:
         type: string
         required: true
@@ -57,8 +61,8 @@ jobs:
           set -euo pipefail
 
           dotnet test \
+            --configuration ${{ input.test-project }} ${{ inputs.configuration }} \
             /p:ExcludeByAttribute="GeneratedCodeAttribute" -- \
-            --configuration ${{ inputs.configuration }} \
             --coverage \
             --coverage-output-format xml \
             --coverage-output "${TC_COBERTURA_FILE}"
