--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Reusable - Builds the .NET project in the current workspace
 on:
   workflow_call:
     inputs:
-      dotnet-version:
+      dotnet_version:
         description: 'Version of .NET SDK to use'
         type: string
         required: false
@@ -39,7 +39,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ inputs.dotnet-version }}
+          dotnet_version: ${{ inputs.dotnet_version }}
           cache: true
           cache-dependency-path: |
             **/packages.lock.json
