--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,32 +13,32 @@ on:
         description: 'JSON array of runners'
         default: '["ubuntu-latest"]'
         required: true
-      dotnet-version:
+      dotnet_version:
         description: 'Version of .NET SDK to use'
         default: '9.0.x'
         required: true
-      test-project:
+      test_project:
         description: 'Path to test project'
         default: './test/UlidType.Tests/UlidType.Tests.csproj'
         required: true
-      coverage-threshold:
+      coverage_threshold:
         description: 'Minimum acceptable code coverage percentage'
         default: '75'
         required: true
-      run-benchmarks:
+      run_benchmarks:
         description: 'Whether to run benchmarks and compare against baseline'
         type: boolean
         default: true
         required: true
-      benchmark-project:
+      benchmark_project:
         description: 'Path to benchmark project'
         default: './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj'
         required: true
-      regression-threshold:
+      regression_threshold:
         description: 'Maximum acceptable performance regression percentage'
         default: '10'
         required: true
-      force-new-baseline:
+      force_new_baseline:
         description: 'Whether to force new baseline (if true, no regression check is done)'
         type: boolean
         default: false
@@ -51,15 +51,15 @@ concurrency:
 env:
   MATRIX_OS:            ${{ inputs.os                        || vars.MATRIX_OS            || '["ubuntu-latest"]' }}
 
-  DOTNET_VERSION:       ${{ inputs.dotnet-version            || vars.DOTNET_VERSION       || '9.0.x' }}
+  DOTNET_VERSION:       ${{ inputs.dotnet_version            || vars.DOTNET_VERSION       || '9.0.x' }}
 
-  TEST_PROJECT:         ${{ inputs.test-project              || vars.TEST_PROJECT         || './test/UlidType.Tests/UlidType.Tests.csproj' }}
-  COVERAGE_THRESHOLD:   ${{ inputs.coverage-threshold        || vars.COVERAGE_THRESHOLD   || '75' }} # percent
+  TEST_PROJECT:         ${{ inputs.test_project              || vars.TEST_PROJECT         || './test/UlidType.Tests/UlidType.Tests.csproj' }}
+  COVERAGE_THRESHOLD:   ${{ inputs.coverage_threshold        || vars.COVERAGE_THRESHOLD   || '75' }} # percent
 
-  RUN_BENCHMARKS:       ${{ inputs.run-benchmarks            || vars.RUN_BENCHMARKS       || 'true' }}  # "true" to run benchmarks and compare against baseline
-  FORCE_NEW_BASELINE:   ${{ inputs.force-new-baseline        || vars.FORCE_NEW_BASELINE   || 'false' }} # "true" to force the current benchmarks results as the new baseline
-  BENCHMARK_PROJECT:    ${{ inputs.benchmark-project         || vars.BENCHMARK_PROJECT    || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
-  REGRESSION_THRESHOLD: ${{ inputs.regression-threshold      || vars.REGRESSION_THRESHOLD || '10' }} # percent allowed performance regression
+  RUN_BENCHMARKS:       ${{ inputs.run_benchmarks            || vars.RUN_BENCHMARKS       || 'true' }}  # "true" to run benchmarks and compare against baseline
+  FORCE_NEW_BASELINE:   ${{ inputs.force_new_baseline        || vars.FORCE_NEW_BASELINE   || 'false' }} # "true" to force the current benchmarks results as the new baseline
+  BENCHMARK_PROJECT:    ${{ inputs.benchmark_project         || vars.BENCHMARK_PROJECT    || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
+  REGRESSION_THRESHOLD: ${{ inputs.regression_threshold      || vars.REGRESSION_THRESHOLD || '10' }} # percent allowed performance regression
 
 jobs:
   build:
@@ -70,7 +70,7 @@ jobs:
       (!contains(github.event.head_commit.message, '[skip ci]')) &&
       (!contains(github.event.head_commit.message, '[no ci]')) }}
     with:
-      dotnet-version: ${{ env.DOTNET_VERSION }}
+      dotnet_version: ${{ inputs.dotnet_version || vars.DOTNET_VERSION || '9.0.x' }}
       os: ${{ env.MATRIX_OS }}
 
   test:
@@ -78,18 +78,18 @@ jobs:
     needs: build
     uses: ./.github/workflows/test.yml
     with:
-      dotnet-version: ${{ env.DOTNET_VERSION }}
-      test-project: ${{ env.TEST_PROJECT }}
-      coverage-threshold: ${{ env.COVERAGE_THRESHOLD }}
-      os: ${{ env.MATRIX_OS }}
+      dotnet_version: ${{ inputs.dotnet_version || vars.DOTNET_VERSION || '9.0.x' }}
+      test_project: ${{ inputs.test_project || vars.TEST_PROJECT || './test/UlidType.Tests/UlidType.Tests.csproj' }}
+      coverage_threshold: ${{ inputs.coverage_threshold || vars.COVERAGE_THRESHOLD || '75' }}
+      os: ${{ inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]' }}
 
   benchmarks:
     name: Benchmarks (Linux only)
     needs: build
-    if: ${{ fromJSON(env.RUN_BENCHMARKS) }}
+    if: ${{ fromJSON(inputs.run_benchmarks) || fromJSON(vars.RUN_BENCHMARKS) || 'true' }}
     uses: ./.github/workflows/benchmarks.yml
     with:
-      dotnet-version: ${{ env.DOTNET_VERSION }}
-      benchmark-project: ${{ env.BENCHMARK_PROJECT }}
-      force-new-baseline: ${{ env.FORCE_NEW_BASELINE }}
-      regression-threshold: ${{ env.REGRESSION_THRESHOLD }}
+      dotnet_version: ${{ inputs.dotnet_version || vars.DOTNET_VERSION || '9.0.x' }}
+      benchmark_project: ${{ inputs.benchmark_project || vars.BENCHMARK_PROJECT || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
+      force_new_baseline: ${{ inputs.force_new_baseline || vars.FORCE_NEW_BASELINE || 'false' }}
+      regression_threshold: ${{ inputs.regression_threshold || vars.REGRESSION_THRESHOLD || '10' }}
