--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,13 +8,13 @@ on:
     inputs:
       reason:
         description: 'Why run?'
-      dotnet_version:
+      dotnet-version:
         description: 'Version of .NET SDK to use'
         default: '9.0.x'
 
 env:
   DOTNET_NOLOGO: true
-  DOTNET_VERSION: ${{ inputs.dotnet_version || vars.DOTNET_VERSION || '9.0.x' }}
+  DOTNET_VERSION: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
   NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
   REASON: ${{ inputs.reason || 'manual run' }}
 
@@ -33,7 +33,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet_version: ${{ env.DOTNET_VERSION }}
+          dotnet-version: ${{ env.DOTNET_VERSION }}
           cache: true
           cache-dependency-path: |
             **/packages.lock.json
