--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,14 +39,8 @@ jobs:
             **/packages.lock.json
             **/*.csproj
 
-      - name: Restore
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build -c Release --no-restore
-
       - name: Test
-        run: dotnet test -c Release --no-build
+        run: dotnet test -c Release
 
       - name: Pack (stable)
         run: |
