--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,16 +82,16 @@ jobs:
     with:
       dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
       test-project: ${{ inputs.test-project || vars.TEST_PROJECT || './test/UlidType.Tests/UlidType.Tests.csproj' }}
-      coverage-threshold: ${{ inputs.coverage-threshold || vars.COVERAGE_THRESHOLD || 75 }}
+      coverage-threshold: ${{ fromJSON(inputs.coverage-threshold) || vars.COVERAGE_THRESHOLD || 75 }}
       os: ${{ inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]' }}
 
   benchmarks:
     name: Benchmarks (Linux only)
     needs: build
-    if: ${{ inputs.run-benchmarks || vars.RUN_BENCHMARKS || 'true' }}
+    if: ${{ fromJSON(inputs.run-benchmarks) || vars.RUN_BENCHMARKS || 'true' }}
     uses: ./.github/workflows/benchmarks.yml
     with:
       dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
       benchmark-project: ${{ inputs.benchmark-project || vars.BENCHMARK_PROJECT || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
-      force-new-baseline: ${{ inputs.force-new-baseline || vars.FORCE_NEW_BASELINE || 'false' }}
-      regression-threshold: ${{ inputs.regression-threshold || vars.REGRESSION_THRESHOLD || 10 }}
+      force-new-baseline: ${{ fromJSON(inputs.force-new-baseline) || vars.FORCE_NEW_BASELINE || 'false' }}
+      regression-threshold: ${{ fromJSON(inputs.regression-threshold) || vars.REGRESSION_THRESHOLD || 10 }}
