--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,6 @@ on:
         default: '9.0.x'
 
 env:
-  DOTNET_NOLOGO: true
-  DOTNET_VERSION: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
   NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
   REASON: ${{ inputs.reason || 'manual run' }}
 
@@ -33,7 +31,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+          dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
           cache: true
           cache-dependency-path: |
             **/packages.lock.json
@@ -43,6 +41,8 @@ jobs:
         run: dotnet test -c Release
 
       - name: Pack (stable)
+        env:
+          REASON: ${{ inputs.reason }}
         run: |
           mkdir -p artifacts/pack
           dotnet pack -c Release --no-build -o artifacts/pack "/p:PackageReleaseNotes=Stable: ${REASON:-tag push}"
@@ -50,19 +50,27 @@ jobs:
 
       - name: Publish stable to NuGet
         run: |
-          if [ -z "${NUGET_API_KEY}" ]; then
+          if [ -z ${{ secrets.NUGET_API_KEY }} ]; then
             echo "NUGET_API_KEY not configured"; exit 1
           fi
-          dotnet nuget push artifacts/pack/*.nupkg --api-key  "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json --skip-duplicate
-          dotnet nuget push artifacts/pack/*.snupkg --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json --skip-duplicate
+          dotnet nuget push artifacts/pack/*.nupkg \
+            --api-key  ${{ secrets.NUGET_API_KEY }} \
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
+          dotnet nuget push artifacts/pack/*.snupkg \
+            --api-key ${{ secrets.NUGET_API_KEY }} \
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
 
       - name: Summary
+        env:
+          REASON: ${{ inputs.reason }}
         run: |
           {
               echo "## Release Summary"
               echo
               echo "- Tag: ${GITHUB_REF_NAME}"
-              echo "- Stable release reason: ${{ inputs.reason || 'tag push' }}"
+              echo "- Stable release reason: ${REASON:-tag push}"
               echo "- Artifacts:"
               ls -1 artifacts/pack | sed 's/^/  - /'
           } >> "$GITHUB_STEP_SUMMARY"
