--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v*'
-      - '!v*-*'
+    tags: ['v*', '!v*-*']
 
   workflow_dispatch:
     inputs:
@@ -22,7 +20,7 @@ env:
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref_name, '-') }}
+    if: ${{ github.event_name == 'workflow_dispatch' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref_name,'-')) }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -49,26 +47,27 @@ jobs:
           REASON: ${{ inputs.reason }}
         run: |
           mkdir -p artifacts/pack
-          dotnet pack -c Release --no-build -o artifacts/pack "/p:PackageReleaseNotes=Stable: ${REASON:-tag push}"
+          dotnet pack -c Release --no-build -o artifacts/pack \
+            "/p:PackageReleaseNotes=Stable: ${REASON:-tag push}"
           ls -1 artifacts/pack
 
       - name: Publish stable to NuGet
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: |
-          if [ -z ${{ secrets.NUGET_API_KEY }} ]; then
-            echo "NUGET_API_KEY not configured"; exit 1
-          fi
+            if [ -z "${NUGET_API_KEY}" ]; then
+              echo "NUGET_API_KEY not configured"; exit 1
+            fi
 
-          dotnet nuget push artifacts/pack/*.nupkg \
-            --api-key  ${{ secrets.NUGET_API_KEY }} \
-            --source https://api.nuget.org/v3/index.json \
-            --skip-duplicate
+            dotnet nuget push artifacts/pack/*.nupkg \
+              --api-key  "${NUGET_API_KEY}" \
+              --source https://api.nuget.org/v3/index.json \
+              --skip-duplicate
 
-          dotnet nuget push artifacts/pack/*.snupkg \
-            --api-key ${{ secrets.NUGET_API_KEY }} \
-            --source https://api.nuget.org/v3/index.json \
-            --skip-duplicate
+            dotnet nuget push artifacts/pack/*.snupkg \
+              --api-key "${NUGET_API_KEY}" \
+              --source https://api.nuget.org/v3/index.json \
+              --skip-duplicate
 
       - name: Summary
         env:
