--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,9 +15,9 @@
         <PackageVersion Include="xunit.v3" Version="3.0.1" />
         <PackageVersion Include="xunit.v3.extensibility.core" Version="3.0.1" />
         <!-- Microsoft Testing Platform makes the following assemblies redundant:
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
+        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />   <!- - required for VSTest but not for MS Test Platform - ->
+        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" /> <!- - required for VSTest but not for MS Test Platform - ->
         <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" />
         -->
         <!-- BenchmarkDotNet -->
         <!-- for running with Visual Studio profiler:
